--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,225 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
 
+body{
+    overflow-x: hidden;
+}
+nav{
+    background-color: white;
+    height: 90px;
+    width: 100%;
+}
+
+.nav-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 90px;
+    margin: 0 30px;
+}
+
+.section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    font-size: 20px;
+}
+
+a{
+    color:#875d3f;
+}
+
+.toggle-button{
+    font-size: 30px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color:#875d3f;
+    display: none;
+}
+
+@media (max-width: 900px){
+    .section {
+        position: absolute;
+        top: 90px;
+        width: 100%;
+        height: auto;
+        display: block;
+        left: 0;
+        gap: 0;
+        z-index: 1;
+        background-color: #875d3f;
+        display: none;
+        }
+
+    .section.show{
+        display: block;
+    }
+    .nav-header ul li {
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        border: 1px solid white;
+    }
+    .toggle-button{
+        display: block;
+    }
+    a {
+        color: white;
+    }
+    .in{
+        flex-wrap: wrap;
+    }
+
+    .in div{
+        width: 200px;
+    }
+}
+
+
+li{
+    cursor: pointer;
+}
+
+.home-center{
+    background-image: url(./images/defaultBcg.jpeg);
+    height: 84.9vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+}
+
+.searchResult{
+    padding: 100px;
+}
+
+.design{
+    height:inherit;
+    display: flex;
+    align-items: center;
+}
+
+.left-center{
+    background-color: rgba(0, 149, 208, 0.9);
+    filter: blur(30px);
+    width: 360px;
+    /* height: inherit; */
+    height: 87%;
+    width: 65%;
+    margin-left: -90px;
+}
+
+.inner{
+    position: absolute;
+    top:35%;
+    left: 5%;
+    width: 48.3%;
+    color: white;
+    
+}
+
+.inner h3, .inner p, .inner button{
+    margin: 10px 0px;
+    margin-right: 21px;
+}
+
+.inner h3{
+    font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.inner p{
+    color: rgb(228, 212, 212)
+}
+
+.inner button{
+    height: 30px;
+    width: 150px;
+    border-radius:5px;
+    border:none;
+    background-color: white;
+    font-size: 15px;
+    font-weight: 600;
+    color:#875d3f;
+    cursor: pointer;
+    
+}
+
+#section1{
+    height: 100vh;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    background-color: rgb(232, 227, 227);
+}
+
+.title{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    margin: 50px;
+}
+
+
+.underline{
+    height: 3px;
+    width: 80%;
+    margin: 8px auto;
+    background-color: rgb(0, 149, 208);
+}
+
+.icon{
+    color: #875d3f;
+    font-size: 25px;
+}
+
+.in{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    height: 400px;
+    width: 100%;
+    margin: 0, 20px;
+}
+
+.in div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 550px;
+    flex-shrink: inherit;
+
+}
+
+.in div article{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 15px;
+}
+
+.in div article h5{
+    font-size: 15px;
+    font-family: 'Segoe UI',
+            Tahoma,
+            Geneva,
+            Verdana,
+            sans-serif;
+    text-transform: capitalize;
+}
+
+#size{
+    width: 30px;
+}
